kubernetes/flux/production/apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: homepage
    app.kubernetes.io/version: v0.6.10
    helm.sh/chart: homepage-1.2.3
  name: homepage
  namespace: homepage
spec:
  ingressClassName: traefik
  rules:
    - host: homepage.srv-k8s.server.io
      http:
        paths:
          - backend:
              service:
                name: homepage
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - homepage.srv-k8s.server.io
      secretName: homepage-tls-secret
